add negative cell luck symbol, update cell info display

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div>Total play time: <span id='infoPlayTime'></span></div>
       <div>Next completion in: <span id='infoNext'></span></div>
       <div>Total time remaining: <span id='infoTimeRemaining'></span></div>
+      <div>Total luck / tick rate: <span id='infoLuckTick'>238072 / 32.43</span></div>
       <div id='infoProgressContainer'><div id='infoProgress'></div></div>
       <div>There are no upgrades.<br>There is only the luck you have gained from being in the same plane of existence as Kristen Bell.</div>
       <hr>
