add win screen and condition

--- a/index.html
+++ b/index.html
@@ -79,20 +79,24 @@
       </div>
     </dialog>    
     <dialog id='winContainer'>
-      <div>
-        Thank you for completing <span class='title'>Pedro Pascal's Triangle of Prestige</span>!
+      <div id='winDialog'> 
+        <div>
+          Thank you for completing <span class='title'>Kristen Bell's Triangle of Transcendence!</span>
+        </div>
+        <div>
+          Your support transcends all others'!
+        </div>
+        <div>
+          Listen, kiddo, I'm super impressed and little worried but don't stress, because your queen will always love you!
+        </div>
+        <div>
+          Your total play time was <span id='winPlayTime'></span>.
+        </div>
       </div>
+      <img id='winImg' src='./win.png'>
       <div>
-        You are my ultimate fan!
+        <button id='winClose'>Close</button>
       </div>
-      <div>
-        I am both impressed and a little worried but don't worry, daddy will always love you!
-      </div>
-      <div>
-        Your total play time was <span id='winPlayTime'></span>.
-      </div>
-      <!-- <img id='winImg' src='./ppoint.png'> -->
-      <button id='winClose'>Close</button>
     </dialog>    
     <dialog id='imexContainer'>
       <div>Import / Export</div>
