add any checkbox

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id='infoBox'>
       <div id='title' class='title'>Kristen Bell's Triangle of Transcendence</div>
       <div>Total play time: <span id='infoPlayTime'></span></div>
-      <div>Next completion in: <span id='infoNext'></span></div>
+      <div>Next completion in: <span id='infoNext'></span><input id='infoNextCheck' type='checkbox'>Any</div>
       <div>Total time remaining: <span id='infoTimeRemaining'></span></div>
       <div>Total luck / tick length: <span id='infoLuckTick'>238072 / 32.43</span></div>
       <div>Symbol threshold: <input id='infoThreshSlider' type='range' min='-1.2' max='1.2' value='0' step='0.05'><span id='infoThreshDisp'>0.0</span></div>
