fix infobox moving on dialog

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div>
             <ul>
               <li>Each cell in the triangle has a value, N, based on the <a href='https://en.wikipedia.org/wiki/Bell_triangle'>Bell Triangle</a>.</li>
-              <li>All previous cells must be complete at least once before a cell can be activated.</li>
+              <li>All previous cells must be completed at least once before a cell can be activated.</li>
               <li>When active, a cell randomly draws values in [1,N] (with replacement) until all of them have been found.</li>
               <li>On cell completion, you gain luck based on how many numbers were drawn.</li>
               <li>The luck gain is the standard deviations away from the expected number of attempts multiplied by N.</li>
