add Est checkbox, function, and desc

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div>Total play time: <span id='infoPlayTime'></span></div>
       <div>Next completion in: <span id='infoNext'></span><input id='infoNextCheck' type='checkbox'>Any</div>
       <div>Total time remaining: <span id='infoTimeRemaining'></span></div>
-      <div>Total luck / tick length: <span id='infoLuckTick'>238072 / 32.43</span></div>
+      <div>Total luck / tick length: <span id='infoLuckTick'>238072 / 32.43</span><input id='infoLuckCheck' type='checkbox'>Est</div>
       <div>Symbol threshold: <input id='infoThreshSlider' type='range' min='-1.2' max='1.2' value='0' step='0.05'><span id='infoThreshDisp'>0.0</span></div>
       <div id='infoProgressContainer'><div id='infoProgress'></div></div>
       <div>There are no upgrades.<br>There is only the luck you have gained from being in the same plane of existence as Kristen Bell.</div>
@@ -62,7 +62,7 @@
               <li>Cell value (and threshold indicator)</li>
               <li>Expected number of draws</li>
               <li>Draws so far : values remaining to be found</li>
-              <li>Luck</li>
+              <li>Luck (based on finishing now or on estimating remaining attempts depending on Est checkbox)</li>
               <li>Estimated time remaining (and run indicator)</li>
             </ol>
           </div>
